# local-runner

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: services.example.toml  services.test-nix.toml  services.test-win.toml
src/: config.rs  error.rs  ipc.rs  main.rs  process.rs  resolver.rs  tests.rs  utils.rs  worker.rs
