[package]
name = "local-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.6"
duct = "0.13.7"
fern = "0.7.1"
colored = "3"
log = "0.4"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
thiserror = "2.0.12"
toml = "0.8.20"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process"] }
